Add blog functionality with pagination, use site url for script path for index.

--- a/_config.yml
+++ b/_config.yml
@@ -2,5 +2,5 @@ auto: true
 markdown: rdiscount
 permalink: /:year/:month/:day/:title
 rdiscount extensions: [smart]
-paginate: 5
-paginate_path: "blog/page:num"
+paginate: 4
+paginate_path: "./blog/page_:num"
