--- a/_config.yml
+++ b/_config.yml
@@ -15,5 +15,7 @@ author:
   url:            https://twitter.com/Nesciosquid
 paginate:         5
 
+gems:             [jekyll-paginate]
+
 github:
   repo:           https://github.com/Nesciosquid
