--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 permalink:        pretty
 
 # Setup
-title:            Aaron Heuckroth
+title:            'Aaron Heuckroth'
 tagline:          '(Nesciosquid)'
 description:      'Thoughts on code, 3D printing, music, and more.'
 url:              http://www.heuckroth.com/
@@ -11,7 +11,7 @@ feed:
   path: atom.xml
 
 author:
-  name:           Aaron Heuckroth
+  name:           'Aaron Heuckroth'
   url:            http://www.heuckroth.com/
   uri:            http://www.heuckroth.com/about/
   email:          aaron@heuckroth.com
