--- a/_config.yml
+++ b/_config.yml
@@ -2,12 +2,13 @@
 permalink:        pretty
 
 # Setup
+name:             heuckroth.com
 title:            'Aaron Heuckroth'
 tagline:          '(Nesciosquid)'
 description:      'Thoughts on code, 3D printing, music, and more.'
 url:              http://www.heuckroth.com
 
-feed: 
+feed:
   path: atom.xml
 
 author:
