--- a/_config.yml
+++ b/_config.yml
@@ -2,6 +2,7 @@
 permalink:        pretty
 
 # Setup
+name: heuckroth.com
 title: Aaron Heuckroth
 tagline: (Nesciosquid)
 description: Thoughts on code, 3D printing, music, and more.
